test/expected/explain_fo_eq2_crkrk_b++default.out
explain friend bool operator==(S const&, S&) = default
                  ^
19: error: default non-member relational operators must take two value or reference-to-const parameters of the same class or a typedef thereof
